<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="aleady_have_an_account">Aleady have an account</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Google</string>
    <string name="default_web_client_id">922858733699-tf1js23fe6dga8fp32r7mbbr9icb4973.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_a_look_at_our_meals">Have a look at our meals</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="check_all_categries">Check all categries</string>
    <string name="login">login</string>
    <string name="Ingredients">Ingredients :</string>
    <string name="Instructions">Instructions :</string>
    <string name="watch_on_youtube">watch_on_youtube</string>
    <string name="open_in_youtube_app">OPen in YouTube</string>
    <string name="watch_the_recipe_from_scratch_on_youtube">Watch the recipe from scratch on youtube</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="search_recipes">Search recipes..</string>
    <string name="food_planner_app">Food Planner App</string>
    <string name="helping_you_plan_meals_smarter">Helping you plan meals smarter</string>
    <string name="_2026_all_rights_reserved">© 2026 All rights reserved</string>
    <string name="_2026_food_planner">© 2026 Food Planner</string>
    <string name="your_favorite_meals">Your Favorite Meals</string>
    <string name="email">email\n</string>
    <string name="password">password\n</string>
    <string name="user_name">user name\n</string>
    <string name="meals_for_this_day">Meals for this day</string>
</resources>