<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home_item"
        />
    <item android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        android:id="@+id/search_item"
        />
    <item android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        android:id="@+id/fav_item"

        />
    <item android:title="@string/calender"
        android:icon="@drawable/ic_calender"
        android:id="@+id/calender_item"
        />


    <item android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:id="@+id/profile_item"
        />
</menu>