<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="70dp"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".prsentation.search.view.SearchFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_search"
                    android:layout_marginEnd="10dp"
                    app:tint="@color/primary" />

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search_recipes"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:background="@null"
                    android:padding="0dp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filterTypeCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchCardView">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:singleSelection="true"
                app:selectionRequired="true"

                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    app:chipBackgroundColor="@color/primary"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipIconSize="24dp"
                    android:checked="true"
                    android:checkable="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ingredient"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient"
                    app:chipBackgroundColor="@color/primary"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipIconSize="24dp"
                    android:checkable="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_country"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    app:chipBackgroundColor="@color/primary"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipIconSize="24dp"
                    android:checkable="true" />

            </com.google.android.material.chip.ChipGroup>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gridRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterTypeCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>