<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progressMealDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvErrorMealDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/youtube_red"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginBottom="12dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            app:cardElevation="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_meal_image"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    android:padding="2dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="16dp"
                    app:backgroundTint="@color/primary"
                    app:tint="@color/white"
                    app:srcCompat="@drawable/ic_favorite"
                    app:maxImageSize="40dp"
                    app:elevation="4dp"
                    app:borderWidth="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:rippleColor="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/primary"
                    app:borderWidth="4dp"
                    app:elevation="4dp"
                    app:maxImageSize="40dp"
                    app:rippleColor="@color/white"
                    app:srcCompat="@drawable/calendar_add_on"
                    app:tint="@color/white" />

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/tv_meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="4dp"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/badge_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/badge_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ingredients"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="1dp"
            app:cardElevation="2dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Instructions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="1dp"
            app:cardElevation="2dp">

            <TextView
                android:id="@+id/tv_meal_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingExtra="4sp"
                android:textIsSelectable="true"
                android:padding="16dp"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_youtube_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watch_the_recipe_from_scratch_on_youtube"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"
            android:visibility="gone"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="1dp"
            app:cardElevation="2dp"
            android:visibility="gone">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_in_youtube_app"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_youtube_play"
            android:drawablePadding="8dp"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>